# cpp files, this list is maintained manually

set(QuantExt_SRC ad/computationgraph.cpp
ad/external_randomvariable_ops.cpp
ad/ssaform.cpp
calendars/amendedcalendar.cpp
calendars/austria.cpp
calendars/belgium.cpp
calendars/cme.cpp
calendars/colombia.cpp
calendars/cyprus.cpp
calendars/france.cpp
calendars/greece.cpp
calendars/ice.cpp
calendars/ireland.cpp
calendars/islamicweekendsonly.cpp
calendars/israel.cpp
calendars/luxembourg.cpp
calendars/malaysia.cpp
calendars/mauritius.cpp
calendars/netherlands.cpp
calendars/peru.cpp
calendars/philippines.cpp
calendars/russia.cpp
calendars/spain.cpp
calendars/switzerland.cpp
calendars/unitedarabemirates.cpp
calendars/wmr.cpp
cashflows/averageonindexedcoupon.cpp
cashflows/averageonindexedcouponpricer.cpp
cashflows/blackaveragebmacouponpricer.cpp
cashflows/blackovernightindexedcouponpricer.cpp
cashflows/bondtrscashflow.cpp
cashflows/brlcdicouponpricer.cpp
cashflows/cappedflooredaveragebmacoupon.cpp
cashflows/cashflows.cpp
cashflows/cashflowtable.cpp
cashflows/cmbcoupon.cpp
cashflows/commoditycashflow.cpp
cashflows/commodityindexedaveragecashflow.cpp
cashflows/commodityindexedcashflow.cpp
cashflows/couponpricer.cpp
cashflows/cpicoupon.cpp
cashflows/cpicouponpricer.cpp
cashflows/durationadjustedcmscoupon.cpp
cashflows/durationadjustedcmscoupontsrpricer.cpp
cashflows/equitycoupon.cpp
cashflows/equitycouponpricer.cpp
cashflows/equitymargincoupon.cpp
cashflows/equitymargincouponpricer.cpp
cashflows/fixedratefxlinkednotionalcoupon.cpp
cashflows/floatingannuitycoupon.cpp
cashflows/floatingannuitynominal.cpp
cashflows/formulabasedcoupon.cpp
cashflows/fxlinkedcashflow.cpp
cashflows/iborfracoupon.cpp
cashflows/indexedcoupon.cpp
cashflows/jyyoyinflationcouponpricer.cpp
cashflows/lognormalcmsspreadpricer.cpp
cashflows/mcgaussianformulabasedcouponpricer.cpp
cashflows/nonstandardcapflooredyoyinflationcoupon.cpp
cashflows/nonstandardinflationcouponpricer.cpp
cashflows/nonstandardyoyinflationcoupon.cpp
cashflows/overnightindexedcoupon.cpp
cashflows/quantocouponpricer.cpp
cashflows/strippedcapflooredcpicoupon.cpp
cashflows/strippedcapflooredyoyinflationcoupon.cpp
cashflows/subperiodscoupon.cpp
cashflows/subperiodscouponpricer.cpp
cashflows/trscashflow.cpp
cashflows/yoyinflationcoupon.cpp
cashflows/zerofixedcoupon.cpp
currencies/africa.cpp
currencies/america.cpp
currencies/asia.cpp
currencies/configurablecurrency.cpp
currencies/europe.cpp
currencies/metals.cpp
indexes/bondindex.cpp
indexes/commoditybasisfutureindex.cpp
indexes/commodityindex.cpp
indexes/compoequityindex.cpp
indexes/compositeindex.cpp
indexes/dividendmanager.cpp
indexes/equityindex.cpp
indexes/fallbackiborindex.cpp
indexes/fallbackovernightindex.cpp
indexes/formulabasedindex.cpp
indexes/fxindex.cpp
indexes/genericiborindex.cpp
indexes/ibor/ameribor.cpp
indexes/ibor/boebaserate.cpp
indexes/ibor/brlcdi.cpp
indexes/ibor/primeindex.cpp
indexes/ibor/sofr.cpp
indexes/ibor/sonia.cpp
indexes/inflationindexwrapper.cpp
indexes/offpeakpowerindex.cpp
indexes/region.cpp
instruments/ascot.cpp
instruments/averageois.cpp
instruments/balanceguaranteedswap.cpp
instruments/bondbasket.cpp
instruments/bondoption.cpp
instruments/bondrepo.cpp
instruments/bondtotalreturnswap.cpp
instruments/brlcdiswap.cpp
instruments/cashflowresults.cpp
instruments/cashsettledeuropeanoption.cpp
instruments/cbo.cpp
instruments/cdsoption.cpp
instruments/cliquetoption.cpp
instruments/commodityapo.cpp
instruments/commodityforward.cpp
instruments/commodityspreadoption.cpp
instruments/convertiblebond.cpp
instruments/convertiblebond2.cpp
instruments/creditlinkedswap.cpp
instruments/crossccybasismtmresetswap.cpp
instruments/crossccybasisswap.cpp
instruments/crossccyfixfloatmtmresetswap.cpp
instruments/crossccyfixfloatswap.cpp
instruments/crossccyswap.cpp
instruments/currencyswap.cpp
instruments/deposit.cpp
instruments/equityforward.cpp
instruments/fixedbmaswap.cpp
instruments/flexiswap.cpp
instruments/forwardbond.cpp
instruments/fxforward.cpp
instruments/genericswaption.cpp
instruments/impliedbondspread.cpp
instruments/indexcdsoption.cpp
instruments/indexcreditdefaultswap.cpp
instruments/makeaverageois.cpp
instruments/makecds.cpp
instruments/makeoiscapfloor.cpp
instruments/multiccycompositeinstrument.cpp
instruments/multilegoption.cpp
instruments/oiccbasisswap.cpp
instruments/outperformanceoption.cpp
instruments/pairwisevarianceswap.cpp
instruments/payment.cpp
instruments/rebatedexercise.cpp
instruments/riskparticipationagreement.cpp
instruments/riskparticipationagreement_tlock.cpp
instruments/subperiodsswap.cpp
instruments/syntheticcdo.cpp
instruments/tenorbasisswap.cpp
instruments/varianceswap.cpp
math/basiccpuenvironment.cpp
math/blockmatrixinverse.cpp
math/bucketeddistribution.cpp
math/compiledformula.cpp
math/computeenvironment.cpp
math/deltagammavar.cpp
math/differentialevolution_mt.cpp
math/discretedistribution.cpp
math/fillemptymatrix.cpp
math/matrixfunctions.cpp
math/openclenvironment.cpp
math/randomvariable.cpp
math/randomvariable_io.cpp
math/randomvariable_ops.cpp
math/randomvariablelsmbasissystem.cpp
math/stoplightbounds.cpp
methods/brownianbridgepathinterpolator.cpp
methods/fdmblackscholesmesher.cpp
methods/fdmblackscholesop.cpp
methods/fdmdefaultableequityjumpdiffusionfokkerplanckop.cpp
methods/fdmdefaultableequityjumpdiffusionop.cpp
methods/fdmlgmop.cpp
methods/fdmquantohelper.cpp
methods/multipathgeneratorbase.cpp
methods/multipathvariategenerator.cpp
methods/projectedbufferedmultipathgenerator.cpp
methods/projectedvariatemultipathgenerator.cpp
models/annuitymapping.cpp
models/basket.cpp
models/carrmadanarbitragecheck.cpp
models/cdsoptionhelper.cpp
models/cirppimplieddefaulttermstructure.cpp
models/cmscaphelper.cpp
models/commodityschwartzmodel.cpp
models/commodityschwartzparametrization.cpp
models/cpicapfloorhelper.cpp
models/crcirpp.cpp
models/crossassetanalytics.cpp
models/crossassetmodel.cpp
models/crossassetmodelimpliedeqvoltermstructure.cpp
models/crossassetmodelimpliedfxvoltermstructure.cpp
models/defaultableequityjumpdiffusionmodel.cpp
models/dkimpliedyoyinflationtermstructure.cpp
models/dkimpliedzeroinflationtermstructure.cpp
models/eqbsconstantparametrization.cpp
models/eqbsparametrization.cpp
models/eqbspiecewiseconstantparametrization.cpp
models/exactbachelierimpliedvolatility.cpp
models/futureoptionhelper.cpp
models/fxbsconstantparametrization.cpp
models/fxbsparametrization.cpp
models/fxbspiecewiseconstantparametrization.cpp
models/fxeqoptionhelper.cpp
models/gaussian1dcrossassetadaptor.cpp
models/gaussianlhplossmodel.cpp
models/hullwhitebucketing.cpp
models/hwmodel.cpp
models/infdkvectorised.cpp
models/infjyparameterization.cpp
models/jyimpliedyoyinflationtermstructure.cpp
models/jyimpliedzeroinflationtermstructure.cpp
models/kienitzlawsonswaynesabrpdedensity.cpp
models/lgm.cpp
models/lgmcalibrationinfo.cpp
models/lgmconvolutionsolver2.cpp
models/lgmfdsolver.cpp
models/lgmimplieddefaulttermstructure.cpp
models/lgmimpliedyieldtermstructure.cpp
models/lgmvectorised.cpp
models/linearannuitymapping.cpp
models/linkablecalibratedmodel.cpp
models/modelimpliedpricetermstructure.cpp
models/modelimpliedyieldtermstructure.cpp
models/normalsabr.cpp
models/normalsabrsmilesection.cpp
models/parametrization.cpp
models/piecewiseconstanthelper.cpp
models/projectedcrossassetmodel.cpp
models/representativefxoption.cpp
models/representativeswaption.cpp
models/transitionmatrix.cpp
models/yoycapfloorhelper.cpp
models/yoyinflationmodeltermstructure.cpp
models/yoyswaphelper.cpp
models/zeroinflationmodeltermstructure.cpp
pricingengines/accrualbondrepoengine.cpp
pricingengines/analyticbarrierengine.cpp
pricingengines/analyticcashsettledeuropeanengine.cpp
pricingengines/analyticcclgmfxoptionengine.cpp
pricingengines/analyticdigitalamericanengine.cpp
pricingengines/analyticdkcpicapfloorengine.cpp
pricingengines/analyticdoublebarrierbinaryengine.cpp
pricingengines/analyticdoublebarrierengine.cpp
pricingengines/analyticeuropeanengine.cpp
pricingengines/analyticeuropeanenginedeltagamma.cpp
pricingengines/analyticeuropeanforwardengine.cpp
pricingengines/analyticjycpicapfloorengine.cpp
pricingengines/analyticjyyoycapfloorengine.cpp
pricingengines/analyticlgmcdsoptionengine.cpp
pricingengines/analyticlgmswaptionengine.cpp
pricingengines/analyticoutperformanceoptionengine.cpp
pricingengines/analyticxassetlgmeqoptionengine.cpp
pricingengines/baroneadesiwhaleyengine.cpp
pricingengines/binomialconvertibleengine.cpp
pricingengines/blackbondoptionengine.cpp
pricingengines/blackcdsoptionengine.cpp
pricingengines/blackindexcdsoptionengine.cpp
pricingengines/blackmultilegoptionengine.cpp
pricingengines/blackswaptionenginedeltagamma.cpp
pricingengines/cboengine.cpp
pricingengines/cbomcengine.cpp
pricingengines/commodityapoengine.cpp
pricingengines/commodityschwartzfutureoptionengine.cpp
pricingengines/commodityspreadoptionengine.cpp
pricingengines/commodityswaptionengine.cpp
pricingengines/cpibacheliercapfloorengine.cpp
pricingengines/cpiblackcapfloorengine.cpp
pricingengines/cpicapfloorengines.cpp
pricingengines/crossccyswapengine.cpp
pricingengines/depositengine.cpp
pricingengines/discountingbondrepoengine.cpp
pricingengines/discountingbondtrsengine.cpp
pricingengines/discountingcommodityforwardengine.cpp
pricingengines/discountingcreditlinkedswapengine.cpp
pricingengines/discountingcurrencyswapengine.cpp
pricingengines/discountingcurrencyswapenginedeltagamma.cpp
pricingengines/discountingequityforwardengine.cpp
pricingengines/discountingforwardbondengine.cpp
pricingengines/discountingfxforwardengine.cpp
pricingengines/discountingfxforwardenginedeltagamma.cpp
pricingengines/discountingriskybondengine.cpp
pricingengines/discountingriskybondenginemultistate.cpp
pricingengines/discountingswapenginedeltagamma.cpp
pricingengines/discountingswapenginemulticurve.cpp
pricingengines/discretizedconvertible.cpp
pricingengines/fdconvertiblebondevents.cpp
pricingengines/fddefaultableequityjumpdiffusionconvertiblebondengine.cpp
pricingengines/indexcdsoptionbaseengine.cpp
pricingengines/indexcdstrancheengine.cpp
pricingengines/inflationcapfloorengines.cpp
pricingengines/intrinsicascotengine.cpp
pricingengines/lgmconvolutionsolver.cpp
pricingengines/mccamcurrencyswapengine.cpp
pricingengines/mccamfxforwardengine.cpp
pricingengines/mccamfxoptionengine.cpp
pricingengines/mclgmswapengine.cpp
pricingengines/mclgmswaptionengine.cpp
pricingengines/mcmultilegbaseengine.cpp
pricingengines/mcmultilegoptionengine.cpp
pricingengines/midpointcdoengine.cpp
pricingengines/midpointcdsenginemultistate.cpp
pricingengines/midpointindexcdsengine.cpp
pricingengines/numericalintegrationindexcdsoptionengine.cpp
pricingengines/numericlgmbgsflexiswapengine.cpp
pricingengines/numericlgmflexiswapengine.cpp
pricingengines/numericlgmmultilegoptionengine.cpp
pricingengines/oiccbasisswapengine.cpp
pricingengines/pairwisevarianceswapengine.cpp
pricingengines/paymentdiscountingengine.cpp
pricingengines/varianceswapgeneralreplicationengine.cpp
pricingengines/volatilityfromvarianceswapengine.cpp
processes/commodityschwartzstateprocess.cpp
processes/crcirppstateprocess.cpp
processes/crossassetstateprocess.cpp
processes/irhwstateprocess.cpp
processes/irlgm1fstateprocess.cpp
quotes/logquote.cpp
termstructures/aposurface.cpp
termstructures/averagefuturepricehelper.cpp
termstructures/averageoffpeakpowerhelper.cpp
termstructures/averageoisratehelper.cpp
termstructures/averagespotpricehelper.cpp
termstructures/basistwoswaphelper.cpp
termstructures/blackdeltautilities.cpp
termstructures/blackvariancecurve3.cpp
termstructures/blackvariancesurfacemoneyness.cpp
termstructures/blackvariancesurfacesparse.cpp
termstructures/blackvariancesurfacestddevs.cpp
termstructures/blackvolconstantspread.cpp
termstructures/blackvolsurfaceabsolute.cpp
termstructures/blackvolsurfacebfrr.cpp
termstructures/blackvolsurfacedelta.cpp
termstructures/blackvolsurfaceproxy.cpp
termstructures/blackvolsurfacewithatm.cpp
termstructures/brlcdiratehelper.cpp
termstructures/capfloorhelper.cpp
termstructures/capfloortermvolsurface.cpp
termstructures/correlationtermstructure.cpp
termstructures/credit/basecorrelationstructure.cpp
termstructures/credit/spreadedbasecorrelationcurve.cpp
termstructures/creditcurve.cpp
termstructures/creditvolcurve.cpp
termstructures/crossccybasismtmresetswaphelper.cpp
termstructures/crossccybasisswaphelper.cpp
termstructures/crossccyfixfloatmtmresetswaphelper.cpp
termstructures/crossccyfixfloatswaphelper.cpp
termstructures/crosscurrencypricetermstructure.cpp
termstructures/datedstrippedoptionlet.cpp
termstructures/datedstrippedoptionletadapter.cpp
termstructures/discountratiomodifiedcurve.cpp
termstructures/dynamiccpivolatilitystructure.cpp
termstructures/dynamicoptionletvolatilitystructure.cpp
termstructures/dynamicswaptionvolmatrix.cpp
termstructures/dynamicyoyoptionletvolatilitystructure.cpp
termstructures/eqcommoptionsurfacestripper.cpp
termstructures/equityforwardcurvestripper.cpp
termstructures/flatcorrelation.cpp
termstructures/flatforwarddividendcurve.cpp
termstructures/futurepricehelper.cpp
termstructures/fxblackvolsurface.cpp
termstructures/fxvannavolgasmilesection.cpp
termstructures/generatordefaulttermstructure.cpp
termstructures/hazardspreadeddefaulttermstructure.cpp
termstructures/iborfallbackcurve.cpp
termstructures/immfraratehelper.cpp
termstructures/inflation/constantcpivolatility.cpp
termstructures/inflation/cpivolatilitystructure.cpp
termstructures/oiccbasisswaphelper.cpp
termstructures/oiscapfloorhelper.cpp
termstructures/oisratehelper.cpp
termstructures/optionletstripper.cpp
termstructures/optionletstripper1.cpp
termstructures/optionletstripper2.cpp
termstructures/overnightfallbackcurve.cpp
termstructures/parametricvolatility.cpp
termstructures/parametricvolatilitysmilesection.cpp
termstructures/pricetermstructure.cpp
termstructures/pricetermstructureadapter.cpp
termstructures/proxyoptionletvolatility.cpp
termstructures/proxyswaptionvolatility.cpp
termstructures/sabrparametricvolatility.cpp
termstructures/spreadedblackvolatilitycurve.cpp
termstructures/spreadedblackvolatilitysurfacemoneyness.cpp
termstructures/spreadedcorrelationcurve.cpp
termstructures/spreadedcpivolatilitysurface.cpp
termstructures/spreadeddiscountcurve.cpp
termstructures/spreadedinflationcurve.cpp
termstructures/spreadedoptionletvolatility.cpp
termstructures/spreadedoptionletvolatility2.cpp
termstructures/spreadedpricetermstructure.cpp
termstructures/spreadedsmilesection.cpp
termstructures/spreadedsmilesection2.cpp
termstructures/spreadedsurvivalprobabilitytermstructure.cpp
termstructures/spreadedswaptionvolatility.cpp
termstructures/spreadedyoyvolsurface.cpp
termstructures/strippedoptionletadapter2.cpp
termstructures/strippedyoyinflationoptionletvol.cpp
termstructures/subperiodsswaphelper.cpp
termstructures/swaptionsabrcube.cpp
termstructures/swaptionvolatilityconverter.cpp
termstructures/swaptionvolconstantspread.cpp
termstructures/swaptionvolcube2.cpp
termstructures/tenorbasisswaphelper.cpp
termstructures/yoyinflationoptionletvolstripper.cpp
time/dateutilities.cpp
time/yearcounter.cpp
utilities/cashflows.cpp
utilities/commodity.cpp
utilities/inflation.cpp
utilities/time.cpp)

# hpp files, this list is maintained manually

set(QuantExt_HDR ad/backwardderivatives.hpp
ad/computationgraph.hpp
ad/external_randomvariable_ops.hpp
ad/forwardderivatives.hpp
ad/forwardevaluation.hpp
ad/ssaform.hpp
auto_link.hpp
calendars/amendedcalendar.hpp
calendars/austria.hpp
calendars/belgium.hpp
calendars/cme.hpp
calendars/colombia.hpp
calendars/cyprus.hpp
calendars/france.hpp
calendars/greece.hpp
calendars/ice.hpp
calendars/ireland.hpp
calendars/islamicweekendsonly.hpp
calendars/israel.hpp
calendars/luxembourg.hpp
calendars/malaysia.hpp
calendars/mauritius.hpp
calendars/netherlands.hpp
calendars/peru.hpp
calendars/philippines.hpp
calendars/russia.hpp
calendars/spain.hpp
calendars/switzerland.hpp
calendars/unitedarabemirates.hpp
calendars/wmr.hpp
cashflows/averageonindexedcoupon.hpp
cashflows/averageonindexedcouponpricer.hpp
cashflows/blackaveragebmacouponpricer.hpp
cashflows/blackovernightindexedcouponpricer.hpp
cashflows/bondtrscashflow.hpp
cashflows/brlcdicouponpricer.hpp
cashflows/cappedflooredaveragebmacoupon.hpp
cashflows/cashflows.hpp
cashflows/cashflowtable.hpp
cashflows/cmbcoupon.hpp
cashflows/commoditycashflow.hpp
cashflows/commodityindexedaveragecashflow.hpp
cashflows/commodityindexedcashflow.hpp
cashflows/couponpricer.hpp
cashflows/cpicoupon.hpp
cashflows/cpicouponpricer.hpp
cashflows/durationadjustedcmscoupon.hpp
cashflows/durationadjustedcmscoupontsrpricer.hpp
cashflows/equitycoupon.hpp
cashflows/equitycouponpricer.hpp
cashflows/equitymargincoupon.hpp
cashflows/equitymargincouponpricer.hpp
cashflows/fixedratefxlinkednotionalcoupon.hpp
cashflows/floatingannuitycoupon.hpp
cashflows/floatingannuitynominal.hpp
cashflows/floatingratefxlinkednotionalcoupon.hpp
cashflows/formulabasedcoupon.hpp
cashflows/fxlinkedcashflow.hpp
cashflows/iborfracoupon.hpp
cashflows/indexedcoupon.hpp
cashflows/jyyoyinflationcouponpricer.hpp
cashflows/lognormalcmsspreadpricer.hpp
cashflows/mcgaussianformulabasedcouponpricer.hpp
cashflows/nonstandardcapflooredyoyinflationcoupon.hpp
cashflows/nonstandardinflationcouponpricer.hpp
cashflows/nonstandardyoyinflationcoupon.hpp
cashflows/overnightindexedcoupon.hpp
cashflows/quantocouponpricer.hpp
cashflows/scaledcoupon.hpp
cashflows/strippedcapflooredcpicoupon.hpp
cashflows/strippedcapflooredyoyinflationcoupon.hpp
cashflows/subperiodscoupon.hpp
cashflows/subperiodscouponpricer.hpp
cashflows/trscashflow.hpp
cashflows/yoyinflationcoupon.hpp
cashflows/zerofixedcoupon.hpp
currencies/africa.hpp
currencies/america.hpp
currencies/asia.hpp
currencies/configurablecurrency.hpp
currencies/currencycomparator.hpp
currencies/europe.hpp
currencies/metals.hpp
indexes/behicp.hpp
indexes/bmaindexwrapper.hpp
indexes/bondindex.hpp
indexes/cacpi.hpp
indexes/commoditybasisfutureindex.hpp
indexes/commodityindex.hpp
indexes/compoequityindex.hpp
indexes/compositeindex.hpp
indexes/decpi.hpp
indexes/dividendmanager.hpp
indexes/dkcpi.hpp
indexes/eqfxindexbase.hpp
indexes/equityindex.hpp
indexes/escpi.hpp
indexes/fallbackiborindex.hpp
indexes/fallbackovernightindex.hpp
indexes/formulabasedindex.hpp
indexes/frcpi.hpp
indexes/fxindex.hpp
indexes/genericiborindex.hpp
indexes/genericindex.hpp
indexes/ibor/ambor.hpp
indexes/ibor/ameribor.hpp
indexes/ibor/boebaserate.hpp
indexes/ibor/brlcdi.hpp
indexes/ibor/chfsaron.hpp
indexes/ibor/chftois.hpp
indexes/ibor/clpcamara.hpp
indexes/ibor/cnhhibor.hpp
indexes/ibor/cnhshibor.hpp
indexes/ibor/cnyrepofix.hpp
indexes/ibor/copibr.hpp
indexes/ibor/corra.hpp
indexes/ibor/czkpribor.hpp
indexes/ibor/demlibor.hpp
indexes/ibor/dkkcibor.hpp
indexes/ibor/dkkcita.hpp
indexes/ibor/dkkois.hpp
indexes/ibor/hkdhibor.hpp
indexes/ibor/hkdhonia.hpp
indexes/ibor/hufbubor.hpp
indexes/ibor/idridrfix.hpp
indexes/ibor/idrjibor.hpp
indexes/ibor/ilstelbor.hpp
indexes/ibor/inrmiborois.hpp
indexes/ibor/inrmifor.hpp
indexes/ibor/jpyeytibor.hpp
indexes/ibor/krwcd.hpp
indexes/ibor/krwkoribor.hpp
indexes/ibor/mxntiie.hpp
indexes/ibor/myrklibor.hpp
indexes/ibor/noknibor.hpp
indexes/ibor/nowa.hpp
indexes/ibor/nzdbkbm.hpp
indexes/ibor/phpphiref.hpp
indexes/ibor/plnpolonia.hpp
indexes/ibor/primeindex.hpp
indexes/ibor/rubkeyrate.hpp
indexes/ibor/saibor.hpp
indexes/ibor/seksior.hpp
indexes/ibor/sekstibor.hpp
indexes/ibor/sekstina.hpp
indexes/ibor/sgdsibor.hpp
indexes/ibor/sgdsor.hpp
indexes/ibor/skkbribor.hpp
indexes/ibor/sofr.hpp
indexes/ibor/sonia.hpp
indexes/ibor/sora.hpp
indexes/ibor/termrateindex.hpp
indexes/ibor/thbbibor.hpp
indexes/ibor/thor.hpp
indexes/ibor/tonar.hpp
indexes/ibor/twdtaibor.hpp
indexes/iborindexfixingoverride.hpp
indexes/inflationindexobserver.hpp
indexes/inflationindexwrapper.hpp
indexes/offpeakpowerindex.hpp
indexes/region.hpp
indexes/secpi.hpp
instruments/ascot.hpp
instruments/averageois.hpp
instruments/balanceguaranteedswap.hpp
instruments/bondbasket.hpp
instruments/bondoption.hpp
instruments/bondrepo.hpp
instruments/bondtotalreturnswap.hpp
instruments/brlcdiswap.hpp
instruments/cashflowresults.hpp
instruments/cashsettledeuropeanoption.hpp
instruments/cbo.hpp
instruments/cdsoption.hpp
instruments/cliquetoption.hpp
instruments/commodityapo.hpp
instruments/commodityforward.hpp
instruments/commodityspreadoption.hpp
instruments/convertiblebond.hpp
instruments/convertiblebond2.hpp
instruments/creditlinkedswap.hpp
instruments/crossccybasismtmresetswap.hpp
instruments/crossccybasisswap.hpp
instruments/crossccyfixfloatmtmresetswap.hpp
instruments/crossccyfixfloatswap.hpp
instruments/crossccyswap.hpp
instruments/currencyswap.hpp
instruments/deposit.hpp
instruments/equityforward.hpp
instruments/fixedbmaswap.hpp
instruments/flexiswap.hpp
instruments/forwardbond.hpp
instruments/fxforward.hpp
instruments/genericswaption.hpp
instruments/impliedbondspread.hpp
instruments/indexcdsoption.hpp
instruments/indexcreditdefaultswap.hpp
instruments/makeaverageois.hpp
instruments/makecds.hpp
instruments/makeoiscapfloor.hpp
instruments/multiccycompositeinstrument.hpp
instruments/multilegoption.hpp
instruments/nullinstrument.hpp
instruments/oiccbasisswap.hpp
instruments/outperformanceoption.hpp
instruments/pairwisevarianceswap.hpp
instruments/payment.hpp
instruments/rebatedexercise.hpp
instruments/riskparticipationagreement.hpp
instruments/riskparticipationagreement_tlock.hpp
instruments/subperiodsswap.hpp
instruments/syntheticcdo.hpp
instruments/tenorbasisswap.hpp
instruments/vanillaforwardoption.hpp
instruments/varianceswap.hpp
interpolators/optioninterpolator2d.hpp
math/basiccpuenvironment.hpp
math/blockmatrixinverse.hpp
math/bucketeddistribution.hpp
math/compiledformula.hpp
math/computeenvironment.hpp
math/constantinterpolation.hpp
math/covariancesalvage.hpp
math/deltagammavar.hpp
math/differentialevolution_mt.hpp
math/discretedistribution.hpp
math/fillemptymatrix.hpp
math/flatextrapolation.hpp
math/flatextrapolation2d.hpp
math/kendallrankcorrelation.hpp
math/logquadraticinterpolation.hpp
math/matrixfunctions.hpp
math/method_mt.hpp
math/nadarayawatson.hpp
math/openclenvironment.hpp
math/problem_mt.hpp
math/quadraticinterpolation.hpp
math/randomvariable.hpp
math/randomvariable_io.hpp
math/randomvariable_opcodes.hpp
math/randomvariable_ops.hpp
math/randomvariablelsmbasissystem.hpp
math/stabilisedglls.hpp
math/stoplightbounds.hpp
math/trace.hpp
methods/brownianbridgepathinterpolator.hpp
methods/fdmblackscholesmesher.hpp
methods/fdmblackscholesop.hpp
methods/fdmdefaultableequityjumpdiffusionfokkerplanckop.hpp
methods/fdmdefaultableequityjumpdiffusionop.hpp
methods/fdmlgmop.hpp
methods/fdmquantohelper.hpp
methods/multipathgeneratorbase.hpp
methods/multipathvariategenerator.hpp
methods/pathgeneratorfactory.hpp
methods/projectedbufferedmultipathgenerator.hpp
methods/projectedbufferedmultipathgeneratorfactory.hpp
methods/projectedvariatemultipathgenerator.hpp
methods/projectedvariatepathgeneratorfactory.hpp
models/annuitymapping.hpp
models/basket.hpp
models/blackscholesmodelwrapper.hpp
models/carrmadanarbitragecheck.hpp
models/cdsoptionhelper.hpp
models/cirppconstantfellerparametrization.hpp
models/cirppconstantparametrization.hpp
models/cirppimplieddefaulttermstructure.hpp
models/cirppparametrization.hpp
models/cmscaphelper.hpp
models/commoditymodel.hpp
models/commodityschwartzmodel.hpp
models/commodityschwartzparametrization.hpp
models/constantlosslatentmodel.hpp
models/cpicapfloorhelper.hpp
models/crcirpp.hpp
models/crlgm1fparametrization.hpp
models/crossassetanalytics.hpp
models/crossassetanalyticsbase.hpp
models/crossassetmodel.hpp
models/crossassetmodelimpliedeqvoltermstructure.hpp
models/crossassetmodelimpliedfxvoltermstructure.hpp
models/crstateparametrization.hpp
models/defaultableequityjumpdiffusionmodel.hpp
models/defaultlossmodel.hpp
models/defaultprobabilitylatentmodel.hpp
models/dkimpliedyoyinflationtermstructure.hpp
models/dkimpliedzeroinflationtermstructure.hpp
models/eqbsconstantparametrization.hpp
models/eqbsparametrization.hpp
models/eqbspiecewiseconstantparametrization.hpp
models/exactbachelierimpliedvolatility.hpp
models/extendedconstantlosslatentmodel.hpp
models/futureoptionhelper.hpp
models/fxbsconstantparametrization.hpp
models/fxbsmodel.hpp
models/fxbsparametrization.hpp
models/fxbspiecewiseconstantparametrization.hpp
models/fxeqoptionhelper.hpp
models/fxmodel.hpp
models/gaussian1dcrossassetadaptor.hpp
models/gaussianlhplossmodel.hpp
models/homogeneouspooldef.hpp
models/hullwhitebucketing.hpp
models/hwconstantparametrization.hpp
models/hwmodel.hpp
models/hwparametrization.hpp
models/infdkparametrization.hpp
models/infdkvectorised.hpp
models/infjyparameterization.hpp
models/inhomogeneouspooldef.hpp
models/irlgm1fconstantparametrization.hpp
models/irlgm1fparametrization.hpp
models/irlgm1fpiecewiseconstanthullwhiteadaptor.hpp
models/irlgm1fpiecewiseconstantparametrization.hpp
models/irlgm1fpiecewiselinearparametrization.hpp
models/irmodel.hpp
models/jyimpliedyoyinflationtermstructure.hpp
models/jyimpliedzeroinflationtermstructure.hpp
models/kienitzlawsonswaynesabrpdedensity.hpp
models/lgm.hpp
models/lgmbackwardsolver.hpp
models/lgmcalibrationinfo.hpp
models/lgmconvolutionsolver2.hpp
models/lgmfdsolver.hpp
models/lgmimplieddefaulttermstructure.hpp
models/lgmimpliedyieldtermstructure.hpp
models/lgmvectorised.hpp
models/linearannuitymapping.hpp
models/linkablecalibratedmodel.hpp
models/marketobserver.hpp
models/modelbuilder.hpp
models/modelimpliedpricetermstructure.hpp
models/modelimpliedyieldtermstructure.hpp
models/normalsabr.hpp
models/normalsabrinterpolation.hpp
models/normalsabrsmilesection.hpp
models/parametrization.hpp
models/piecewiseconstanthelper.hpp
models/poollossmodel.hpp
models/projectedcrossassetmodel.hpp
models/pseudoparameter.hpp
models/representativefxoption.hpp
models/representativeswaption.hpp
models/transitionmatrix.hpp
models/yoycapfloorhelper.hpp
models/yoyinflationmodeltermstructure.hpp
models/yoyswaphelper.hpp
models/zeroinflationmodeltermstructure.hpp
pricingengines/accrualbondrepoengine.hpp
pricingengines/amccalculator.hpp
pricingengines/analyticbarrierengine.hpp
pricingengines/analyticcashsettledeuropeanengine.hpp
pricingengines/analyticcclgmfxoptionengine.hpp
pricingengines/analyticdigitalamericanengine.hpp
pricingengines/analyticdkcpicapfloorengine.hpp
pricingengines/analyticdoublebarrierbinaryengine.hpp
pricingengines/analyticdoublebarrierengine.hpp
pricingengines/analyticeuropeanengine.hpp
pricingengines/analyticeuropeanenginedeltagamma.hpp
pricingengines/analyticeuropeanforwardengine.hpp
pricingengines/analyticjycpicapfloorengine.hpp
pricingengines/analyticjyyoycapfloorengine.hpp
pricingengines/analyticlgmcdsoptionengine.hpp
pricingengines/analyticlgmswaptionengine.hpp
pricingengines/analyticoutperformanceoptionengine.hpp
pricingengines/analyticxassetlgmeqoptionengine.hpp
pricingengines/baroneadesiwhaleyengine.hpp
pricingengines/binomialconvertibleengine.hpp
pricingengines/blackbondoptionengine.hpp
pricingengines/blackcdsoptionengine.hpp
pricingengines/blackindexcdsoptionengine.hpp
pricingengines/blackmultilegoptionengine.hpp
pricingengines/blackswaptionenginedeltagamma.hpp
pricingengines/cboengine.hpp
pricingengines/cbomcengine.hpp
pricingengines/commodityapoengine.hpp
pricingengines/commodityschwartzfutureoptionengine.hpp
pricingengines/commodityspreadoptionengine.hpp
pricingengines/commodityswaptionengine.hpp
pricingengines/cpibacheliercapfloorengine.hpp
pricingengines/cpiblackcapfloorengine.hpp
pricingengines/cpicapfloorengines.hpp
pricingengines/crossccyswapengine.hpp
pricingengines/depositengine.hpp
pricingengines/discountingbondrepoengine.hpp
pricingengines/discountingbondtrsengine.hpp
pricingengines/discountingcommodityforwardengine.hpp
pricingengines/discountingcreditlinkedswapengine.hpp
pricingengines/discountingcurrencyswapengine.hpp
pricingengines/discountingcurrencyswapenginedeltagamma.hpp
pricingengines/discountingequityforwardengine.hpp
pricingengines/discountingforwardbondengine.hpp
pricingengines/discountingfxforwardengine.hpp
pricingengines/discountingfxforwardenginedeltagamma.hpp
pricingengines/discountingriskybondengine.hpp
pricingengines/discountingriskybondenginemultistate.hpp
pricingengines/discountingswapenginedeltagamma.hpp
pricingengines/discountingswapenginemulticurve.hpp
pricingengines/discretizedconvertible.hpp
pricingengines/fdconvertiblebondevents.hpp
pricingengines/fddefaultableequityjumpdiffusionconvertiblebondengine.hpp
pricingengines/indexcdsoptionbaseengine.hpp
pricingengines/indexcdstrancheengine.hpp
pricingengines/inflationcapfloorengines.hpp
pricingengines/intrinsicascotengine.hpp
pricingengines/lgmconvolutionsolver.hpp
pricingengines/mccamcurrencyswapengine.hpp
pricingengines/mccamfxforwardengine.hpp
pricingengines/mccamfxoptionengine.hpp
pricingengines/mclgmswapengine.hpp
pricingengines/mclgmswaptionengine.hpp
pricingengines/mcmultilegbaseengine.hpp
pricingengines/mcmultilegoptionengine.hpp
pricingengines/midpointcdoengine.hpp
pricingengines/midpointcdsenginemultistate.hpp
pricingengines/midpointindexcdsengine.hpp
pricingengines/numericalintegrationindexcdsoptionengine.hpp
pricingengines/numericlgmbgsflexiswapengine.hpp
pricingengines/numericlgmflexiswapengine.hpp
pricingengines/numericlgmmultilegoptionengine.hpp
pricingengines/oiccbasisswapengine.hpp
pricingengines/pairwisevarianceswapengine.hpp
pricingengines/paymentdiscountingengine.hpp
pricingengines/tflattice.hpp
pricingengines/varianceswapgeneralreplicationengine.hpp
pricingengines/volatilityfromvarianceswapengine.hpp
processes/commodityschwartzstateprocess.hpp
processes/crcirppstateprocess.hpp
processes/crossassetstateprocess.hpp
processes/irhwstateprocess.hpp
processes/irlgm1fstateprocess.hpp
quotes/basecorrelationquote.hpp
quotes/compositevectorquote.hpp
quotes/exceptionquote.hpp
quotes/logquote.hpp
termstructures/adjusteddefaultcurve.hpp
termstructures/aposurface.hpp
termstructures/atmadjustedsmilesection.hpp
termstructures/averagefuturepricehelper.hpp
termstructures/averageoffpeakpowerhelper.hpp
termstructures/averageoisratehelper.hpp
termstructures/averagespotpricehelper.hpp
termstructures/basistwoswaphelper.hpp
termstructures/blackdeltautilities.hpp
termstructures/blackinvertedvoltermstructure.hpp
termstructures/blackmonotonevarvoltermstructure.hpp
termstructures/blacktriangulationatmvol.hpp
termstructures/blackvariancecurve3.hpp
termstructures/blackvariancesurfacemoneyness.hpp
termstructures/blackvariancesurfacesparse.hpp
termstructures/blackvariancesurfacestddevs.hpp
termstructures/blackvolconstantspread.hpp
termstructures/blackvolsurfaceabsolute.hpp
termstructures/blackvolsurfacebfrr.hpp
termstructures/blackvolsurfacedelta.hpp
termstructures/blackvolsurfaceproxy.hpp
termstructures/blackvolsurfacewithatm.hpp
termstructures/bondyieldshiftedcurvetermstructure.hpp
termstructures/brlcdiratehelper.hpp
termstructures/capfloorhelper.hpp
termstructures/capfloortermvolcurve.hpp
termstructures/capfloortermvolsurface.hpp
termstructures/capfloortermvolsurfacesparse.hpp
termstructures/commodityaveragebasispricecurve.hpp
termstructures/commoditybasispricecurve.hpp
termstructures/commoditybasispricecurvewrapper.hpp
termstructures/commoditybasispricetermstructure.hpp
termstructures/correlationtermstructure.hpp
termstructures/credit/basecorrelationstructure.hpp
termstructures/credit/spreadedbasecorrelationcurve.hpp
termstructures/creditcurve.hpp
termstructures/creditvolcurve.hpp
termstructures/crossccybasismtmresetswaphelper.hpp
termstructures/crossccybasisswaphelper.hpp
termstructures/crossccyfixfloatmtmresetswaphelper.hpp
termstructures/crossccyfixfloatswaphelper.hpp
termstructures/crosscurrencypricetermstructure.hpp
termstructures/datedstrippedoptionlet.hpp
termstructures/datedstrippedoptionletadapter.hpp
termstructures/datedstrippedoptionletbase.hpp
termstructures/discountratiomodifiedcurve.hpp
termstructures/dynamicblackvoltermstructure.hpp
termstructures/dynamiccpivolatilitystructure.hpp
termstructures/dynamicoptionletvolatilitystructure.hpp
termstructures/dynamicstype.hpp
termstructures/dynamicswaptionvolmatrix.hpp
termstructures/dynamicyoyoptionletvolatilitystructure.hpp
termstructures/eqcommoptionsurfacestripper.hpp
termstructures/equityforwardcurvestripper.hpp
termstructures/flatcorrelation.hpp
termstructures/flatforwarddividendcurve.hpp
termstructures/futurepricehelper.hpp
termstructures/fxblackvolsurface.hpp
termstructures/fxsmilesection.hpp
termstructures/fxvannavolgasmilesection.hpp
termstructures/generatordefaulttermstructure.hpp
termstructures/hazardspreadeddefaulttermstructure.hpp
termstructures/iborfallbackcurve.hpp
termstructures/immfraratehelper.hpp
termstructures/implieddefaulttermstructure.hpp
termstructures/inflation/constantcpivolatility.hpp
termstructures/inflation/cpipricevolatilitysurface.hpp
termstructures/inflation/cpivolatilitystructure.hpp
termstructures/inflation/inflationtraits.hpp
termstructures/inflation/piecewisezeroinflationcurve.hpp
termstructures/interpolatedcorrelationcurve.hpp
termstructures/interpolatedcpivolatilitysurface.hpp
termstructures/interpolateddiscountcurve.hpp
termstructures/interpolateddiscountcurve2.hpp
termstructures/interpolatedhazardratecurve.hpp
termstructures/interpolatedsurvivalprobabilitycurve.hpp
termstructures/interpolatedyoycapfloortermpricesurface.hpp
termstructures/iterativebootstrap.hpp
termstructures/kinterpolatedyoyoptionletvolatilitysurface.hpp
termstructures/multisectiondefaultcurve.hpp
termstructures/oiccbasisswaphelper.hpp
termstructures/oiscapfloorhelper.hpp
termstructures/oisratehelper.hpp
termstructures/optionletcurve.hpp
termstructures/optionletstripper.hpp
termstructures/optionletstripper1.hpp
termstructures/optionletstripper2.hpp
termstructures/optionletstripperwithatm.hpp
termstructures/optionpricesurface.hpp
termstructures/overnightfallbackcurve.hpp
termstructures/parametricvolatility.hpp
termstructures/parametricvolatilitysmilesection.hpp
termstructures/piecewiseatmoptionletcurve.hpp
termstructures/piecewiseoptionletcurve.hpp
termstructures/piecewiseoptionletstripper.hpp
termstructures/piecewisepricecurve.hpp
termstructures/pricecurve.hpp
termstructures/pricetermstructure.hpp
termstructures/pricetermstructureadapter.hpp
termstructures/probabilitytraits.hpp
termstructures/proxyoptionletvolatility.hpp
termstructures/proxyswaptionvolatility.hpp
termstructures/sabrparametricvolatility.hpp
termstructures/sabrstrippedoptionletadapter.hpp
termstructures/spreadedblackvolatilitycurve.hpp
termstructures/spreadedblackvolatilitysurfacemoneyness.hpp
termstructures/spreadedcorrelationcurve.hpp
termstructures/spreadedcpivolatilitysurface.hpp
termstructures/spreadeddiscountcurve.hpp
termstructures/spreadedinflationcurve.hpp
termstructures/spreadedoptionletvolatility.hpp
termstructures/spreadedoptionletvolatility2.hpp
termstructures/spreadedpricetermstructure.hpp
termstructures/spreadedsmilesection.hpp
termstructures/spreadedsmilesection2.hpp
termstructures/spreadedsurvivalprobabilitytermstructure.hpp
termstructures/spreadedswaptionvolatility.hpp
termstructures/spreadedyoyvolsurface.hpp
termstructures/staticallycorrectedyieldtermstructure.hpp
termstructures/strippedcpivolatilitystructure.hpp
termstructures/strippedoptionletadapter.hpp
termstructures/strippedoptionletadapter2.hpp
termstructures/strippedyoyinflationoptionletvol.hpp
termstructures/subperiodsswaphelper.hpp
termstructures/survivalprobabilitycurve.hpp
termstructures/swaptionsabrcube.hpp
termstructures/swaptionvolatilityconverter.hpp
termstructures/swaptionvolconstantspread.hpp
termstructures/swaptionvolcube2.hpp
termstructures/swaptionvolcubewithatm.hpp
termstructures/tenorbasisswaphelper.hpp
termstructures/terminterpolateddefaultcurve.hpp
termstructures/weightedyieldtermstructure.hpp
termstructures/yieldplusdefaultyieldtermstructure.hpp
termstructures/yoyinflationcurveobservermoving.hpp
termstructures/yoyinflationcurveobserverstatic.hpp
termstructures/yoyinflationoptionletvolstripper.hpp
termstructures/zeroinflationcurveobservermoving.hpp
termstructures/zeroinflationcurveobserverstatic.hpp
time/dateutilities.hpp
time/futureexpirycalculator.hpp
time/yearcounter.hpp
utilities/cashflows.hpp
utilities/commodity.hpp
utilities/inflation.hpp
utilities/interpolation.hpp
utilities/savedobservablesettings.hpp
utilities/time.hpp
version.hpp)

writeAll("qle" "quantext.hpp" "auto_link.hpp" "${QuantExt_HDR}")
add_library(${QLE_LIB_NAME} ${QuantExt_SRC})
target_link_libraries(${QLE_LIB_NAME} ${QL_LIB_NAME} ${Boost_LIBRARIES})

if(ORE_ENABLE_OPENCL)
  if(APPLE)
    target_link_libraries(${QLE_LIB_NAME} "-framework OpenCL")
  else()
    find_package(OpenCL REQUIRED)
    target_link_libraries(${QLE_LIB_NAME} OpenCL::OpenCL)
  endif()
endif()

if(NOT USE_GLOBAL_ORE_BUILD AND QL_USE_PCH)
 target_precompile_headers(${QLE_LIB_NAME}
   PUBLIC
    <ql/any.hpp>
    <ql/errors.hpp>
    <ql/index.hpp>
    <ql/indexes/indexmanager.hpp>
    <ql/instrument.hpp>
    <ql/indexes/interestrateindex.hpp>
    <ql/math/array.hpp>
    <ql/math/interpolations/cubicinterpolation.hpp>
    <ql/math/matrix.hpp>
    <ql/methods/finitedifferences/operators/fdmlinearop.hpp>
    <ql/patterns/observable.hpp>
    <ql/qldefines.hpp>
    <ql/termstructure.hpp>)
endif()

install(DIRECTORY . DESTINATION include/qle
        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")

install(TARGETS ${QLE_LIB_NAME}
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        )
